--- a/style1.css
+++ b/style1.css
@@ -29,6 +29,7 @@ form {
   /* background: white; */
   padding: 2rem;
   border-radius: 0.5rem;
+  text-align: center;
 }
 h2 {
   text-align: center;
