--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body {
   }
 }
 
-@media (max-width: 340px) {
+@media (min-width: 240px) and (max-width: 760px) {
   .balloon {
     height: 125px;
     width: 65px;
